Updated name to LDSegmenter